src/snapshots/ec2hx__lang@tab_width.snap
---
source: src/lib.rs
expression: languages_toml
input_file: test_data/tab_width
snapshot_kind: text
---
# language-specific settings:

[[language]]
name = "make"
indent = { unit = "\t", tab-width = 11 }

[[language]]
name = "rust"
indent = { unit = "\t", tab-width = 13 }

################################################################################

# global settings, applied equally to all remaining languages:

[[language]]
name = "bibtex"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "c-sharp"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "cue"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "devicetree"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "env"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "gdscript"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "git-config"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "git-rebase"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "go"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "godot-resource"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "gomod"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "gowork"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "hare"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "ini"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "latex"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "odin"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "openscad"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "supercollider"
indent = { unit = "\t", tab-width = 9 }

[[language]]
name = "v"
indent = { unit = "\t", tab-width = 9 }
